[gd_scene load_steps=6 format=3 uid="uid://dexaeb0yjvpmy"]

[ext_resource type="Script" uid="uid://doexvh7xjsgna" path="res://enemy/shooter/spiny_shooter.gd" id="1_iacun"]
[ext_resource type="PackedScene" uid="uid://bjolphmeflso6" path="res://enemy/multi_gun.tscn" id="2_56jy7"]

[sub_resource type="Animation" id="Animation_0kxyt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_bs2fj"]
resource_name = "new_animation"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rqr2d"]
_data = {
&"RESET": SubResource("Animation_0kxyt"),
&"new_animation": SubResource("Animation_bs2fj")
}

[node name="SpinyShooter" type="Node2D"]
script = ExtResource("1_iacun")
gun_A = ExtResource("2_56jy7")
gun_B = ExtResource("2_56jy7")

[node name="SpinAnimator" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_rqr2d")
}
autoplay = "new_animation"

[node name="GunSpotA" type="Marker2D" parent="."]
position = Vector2(8, 0)

[node name="GunSpotB" type="Marker2D" parent="."]
position = Vector2(-8, 0)
